force-app/main/default/objects/Document_Requested__c/Document_Requested__c.object-meta.xml
<CustomObject>
    <label>Document Requested</label>
    <nameField>
        <displayFormat>DR-{0000000000}</displayFormat>
        <label>Document Requested Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents Requested</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>