force-app/main/default/objects/Document_Requested__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Documents Requested</relationshipLabel>
    <relationshipName>Documents_Requested</relationshipName>
    <type>Lookup</type>
</CustomField>