force-app/main/default/objects/Document_Requested__c/fields/Current_in_use__c.field-meta.xml
<CustomField>
    <fullName>Current_in_use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current in use</label>
    <type>Checkbox</type>
</CustomField>