force-app/main/default/objects/Document_Requested__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <length>200</length>
    <type>Text</type>
</CustomField>