force-app/main/default/objects/Document_Requested__c/fields/is_bank_fail__c.field-meta.xml
<CustomField>
    <fullName>is_bank_fail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is bank fail</label>
    <type>Checkbox</type>
</CustomField>