force-app/main/default/objects/Document_Requested__c/fields/isAlready_provided__c.field-meta.xml
<CustomField>
    <fullName>isAlready_provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAlready provided</label>
    <type>Checkbox</type>
</CustomField>