force-app/main/default/objects/Document_Requested__c/fields/isApplicable__c.field-meta.xml
<CustomField>
    <fullName>isApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Applicable</label>
    <type>Checkbox</type>
</CustomField>