force-app/main/default/objects/Document_Requested__c/fields/isBankStatement__c.field-meta.xml
<CustomField>
    <fullName>isBankStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBankStatement</label>
    <type>Checkbox</type>
</CustomField>