force-app/main/default/objects/Document_Requested__c/fields/isComplete__c.field-meta.xml
<CustomField>
    <fullName>isComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isComplete</label>
    <type>Checkbox</type>
</CustomField>