force-app/main/default/objects/Document_Requested__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Documents Requested</relationshipLabel>
    <relationshipName>Documents_Requested</relationshipName>
    <type>Lookup</type>
</CustomField>