force-app/main/default/objects/Document_Requested__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <description>IF(  IsJoint__c  = true , &quot;General&quot; , IF(Person_Account__c  = Opportunity__r.Applicant_1__c, &quot;Applicant 1&quot; ,  IF( Person_Account__c  =  Opportunity__r.Applicant_2__c  , &quot;Applicant 2&quot; , &quot;&quot; ) ) )</description>
    <formula>IF(  IsJoint__c  = true , &quot;General&quot; ,IF(NOT(ISBLANK(Person_Account__c)), IF(Person_Account__c  = Opportunity__r.Applicant_1__c, &quot;Applicant 1&quot; ,  IF( Person_Account__c  =  Opportunity__r.Applicant_2__c  , &quot;Applicant 2&quot; , &quot;&quot; ) ),&quot;&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To</label>
    <type>Text</type>
</CustomField>