force-app/main/default/objects/Document_Requested__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( isAlready_provided__c == true,
IMAGE(&quot;/resource/DocumentRequestedIcons/docsReq/green.png&quot;, &quot;Already Provided&quot;, 20, 20)&amp; &quot; Already Provided&quot;,
IF( isApplicable__c == true,
IMAGE(&quot;/resource/DocumentRequestedIcons/docsReq/yellow.png&quot;, &quot;Not Applicable&quot;, 20, 20) &amp; &quot; Not Applicable&quot;,
IF( isComplete__c == true,
IMAGE(&quot;/resource/DocumentRequestedIcons/docsReq/darkgreen.png&quot;, &quot;Submitted&quot;, 20, 20) &amp; &quot; Submitted&quot;,
IMAGE(&quot;/resource/DocumentRequestedIcons/docsReq/red.png&quot;, &quot;Requested&quot;, 20, 20) &amp; &quot; Requested&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>