force-app/main/default/objects/Document_Requested__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Details__c</columns>
    <columns>Document__c</columns>
    <columns>IsJoint__c</columns>
    <columns>isAlready_provided__c</columns>
    <columns>isApplicable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>